--- a/simple-k8-yamls/av-app-deployment.yml
+++ b/simple-k8-yamls/av-app-deployment.yml
@@ -18,7 +18,7 @@ spec:
         app: flaskdemo
     spec:
       containers:
-      - image: 933082532808.dkr.ecr.eu-central-1.amazonaws.com/apps_images:v1
+      - image: 933082532808.dkr.ecr.eu-central-1.amazonaws.com/apps_images:latest
         name: flaskdemo
         resources: {}
 status: {}
